<resources>
    <string name="app_name">TalentApp</string>
    <string name="login">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="hintEmail">Email</string>
    <string name="hintPass">Password</string>
    <string name="hintConfirmPass">Confirm Password</string>
    <string name="hintUsername">Username</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">The given email is invalid</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="author">Author</string>
    <string name="spring">Spring</string>
    <string name="summer">summer</string>
    <string name="season">season</string>
</resources>
